--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -28,9 +28,27 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+[float]
+===== Bug fixes
+
+* Fix a bug in instrumentation of `@elastic/elasticsearch` that caused a
+  memory leak. ({issues}2569[#2569])
+
 
 [[release-notes-3.28.0]]
 ==== 3.28.0 2022/02/08
+
+Known issue: This release includes a memory leak in instrumentation of the
+`@elastic/elasticsearch` package. If you use that package, you should not
+use v3.28.0 of this APM agent. ({issues}2569[#2569])
 
 [float]
 ===== Breaking changes
