--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -28,16 +28,9 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
-==== Unreleased
 
-[float]
-===== Breaking changes
-
-[float]
-===== Features
-
-[float]
-===== Bug fixes
+[[release-notes-3.29.0]]
+==== 3.29.0 2022/02/10
 
 * Fix a bug in instrumentation of `@elastic/elasticsearch` that caused a
   memory leak. ({issues}2569[#2569])
