feat!, perf: spanStackTraceMinDuration config option, span.stacktrace disabled by default (#2565)
**Collection of stacktraces for spans is now disabled by default**, because the
CPU performance overhead has been found to be too large in practice. This can be
a significant improvement for applications that are heavily loaded and/or produce
many spans. The relevant config option is the new `spanStackTraceMinDuration`.
Span stacktraces going away in the Kibana APM app could surprise users,
but this is not considered a "breaking" change.

Adds a **new config option `spanStackTraceMinDuration`** that replaces both
`captureSpanStackTraces` and `spanFramesMinDuration`. The latter two are now
deprecated. The new config option, `span_stack_trace_min_duration` in central
config and in other agents, is the specified cross-agent option name. It has
these differences with `spanFramesMinDuration`:
- new name
- the semantics of zero and negative values has flipped: negative means *never*
  collect span stack traces, zero means *always* collect span stack traces
  regardless of span duration
- the default unit is now milliseconds (copying the Java agent)

Other related changes:
- The performance tuning guide has been updated: The span stack trace section
  is closer to the top. I also removed most of the "APM Server communication"
  section because IME those config vars are not significant to performance.
- Normalizing of duration options has been improved to: support different
  default units, support the eventual usage of the 'us' unit for upcoming work.
- The 'transaction-and-span-overhead-realistic-size' benchmark was changed to
  use the default config, and 'transaction-and-span-overhead-realistic-size-with-stack-trace'
  was added for the same test, but always with span.stacktrace collection.

Closes: #2381
Closes: #2536
Closes: #2092

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -29,6 +29,35 @@ Notes:
 === Node.js Agent version 3.x
 
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+* Added a new config option <<span-stack-trace-min-duration,`spanStackTraceMinDuration`>>
+  that replaces both <<capture-span-stack-traces,`captureSpanStackTraces`>>
+  and <<span-frames-min-duration,`spanFramesMinDuration`>>. The latter two are
+  now deprecated, but still supported. If `spanStackTraceMinDuration` is
+  specified, then any value for the deprecated two options will be ignored.
++
+There is a significant change in _default_ behavior of the APM agent. If none
+of these configuration options is specified, then the default
+(`spanStackTraceMinDuration: -1`) is that stack traces are *not* collected
+and reported for any spans. This change in default behavior was made because
+the CPU performance impact of collecting span stack traces was found to be
+too high in practice for busy and/or complex applications. This is mentioned
+in the "Breaking changes" section to highlight the change, but it is not
+considered breaking in general. The impact is that the "Stack Trace" tab in
+the "Span details" view in the Kibana APM app will be empty. This was already
+the case for some spans based on span duration. ({pull}2565[#2565])
+
+[float]
+===== Features
+
+[float]
+===== Bug fixes
+
+
 [[release-notes-3.29.0]]
 ==== 3.29.0 2022/02/10
 
