--- a/docs/lambda.asciidoc
+++ b/docs/lambda.asciidoc
@@ -66,8 +66,8 @@ Here's a simple lambda example with the Elastic APM agent installed:
 // Add this to the VERY top of your lambda handler module
 const apm = require('elastic-apm-node').start({})
 
-exports.handler = apm.lambda(function handler (payload, context, callback) {
-  callback(null, `Hello, ${payload.name}!`)
+exports.handler = apm.lambda(function handler (event, context, callback) {
+  callback(null, `Hello, ${event.name}!`)
 })
 ----
 
