--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -54,12 +54,17 @@ the case for some spans based on span duration. ({pull}2565[#2565])
 [float]
 ===== Features
 
-* Improvements to AWS Lambda instrumentation: Better `transaction.name` for
-  API Gateway-triggered lambdas. Respect explicitly set `serviceName`,
-  `serviceVersion`, and `usePathAsTransactionName` config settings. Default
-  `cloudProvider: none` and `centralConfig: false` to reduce required
-  environment variables for setting up APM instrumentation of Lambdas.
-  ({issues}2531[#2531])
+* Improvements to AWS Lambda instrumentation:
++
+**  Improve data flushing between the APM agent and the Elastic Lambda
+    extension. This fixes cases where some APM events could be dropped, and
+    should improve Lambda function latency with the explicit end signaling
+    from agent to extension. ({issues}2485[#2485])
+**  Better `transaction.name` for API Gateway-triggered lambdas. Respect
+    explicitly set `serviceName`, `serviceVersion`, and
+    `usePathAsTransactionName` config settings. Default `cloudProvider: none`
+    and `centralConfig: false` to reduce required environment variables for
+    setting up APM instrumentation of Lambdas.  ({issues}2531[#2531])
 
 [float]
 ===== Bug fixes
