--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -51,6 +51,17 @@ considered breaking in general. The impact is that the "Stack Trace" tab in
 the "Span details" view in the Kibana APM app will be empty. This was already
 the case for some spans based on span duration. ({pull}2565[#2565])
 
+* Implement the explicit signaling of Lambda invocation completion to the
+  Elastic AWS Lambda Extension. This improves data flushing in a Lambda
+  environment to ensure tracing data is only sent when the Lambda is active.
+  This avoids possible tracing data loss while a Lambda VM is frozen.
+  ({issues}2485[#2485])
++
+However, because this change triggers a bug in the extension, this version of
+the APM Node.js Agent must only be used with versions of the
+https://www.elastic.co/guide/en/apm/guide/current/aws-lambda-extension.html[AWS Lambda Extension]
+after v0.0.3.
+
 [float]
 ===== Features
 
