--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -29,7 +29,8 @@ Notes:
 === Node.js Agent version 3.x
 
 
-==== Unreleased
+[[release-notes-3.30.0]]
+==== 3.30.0 2022/03/10
 
 [float]
 ===== Breaking changes
