--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -38,7 +38,7 @@ Notes:
 
 [float]
 ===== Bug fixes
-* Updated `sanitizeFieldNames` and `ignoreMessageQueues` enviornment variables
+* Updated `sanitizeFieldNames` and `ignoreMessageQueues` environment variables
   to use `ELASTIC_APM_` prefix. (previous variable names are still recgonized,
   but not documented) ({issues}2636[#2636])
 
