--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -46,7 +46,7 @@ Notes:
 * Allow a new span to be created/started even if its transaction has ended.
   This is expected to be a very rare use case. ({pull}2653[#2653])
 
-* Span compression now obeys the `isCompressionEligable` rules from https://github.com/elastic/apm/blob/main/specs/agents/handling-huge-traces/tracing-spans-compress.md#eligibility-for-compression[the spec]. Span compression is enabled by default.
+* Span compression now obeys the `isCompressionEligible` rules from https://github.com/elastic/apm/blob/main/specs/agents/handling-huge-traces/tracing-spans-compress.md#eligibility-for-compression[the spec]. Span compression is enabled by default.
   ({issues}2604[#2604])
 
 * The Trace Context headers are now propagated for http2 requests.
