fix: combine change log entries

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -37,7 +37,7 @@ Notes:
 ===== Features
 
 * Adds initial implementaion of
-  https://github.com/elastic/apm/blob/main/specs/agents/handling-huge-traces/tracing-spans-compress.md[span compression]. To enable, set the `spanCompressionEnabled` configuration field to `true`.  ({issues}2100[#2100])
+  https://github.com/elastic/apm/blob/main/specs/agents/handling-huge-traces/tracing-spans-compress.md[span compression]. To disable, set the `spanCompressionEnabled` configuration field to `false`.  ({issues}2100[#2100], {issues}2604[#2604])
 
 * Marks spans as "exit spans" across all instrumentations, preventing additional
   child spans from being added to the exit spans.  See issue for a full list of
@@ -45,9 +45,6 @@ Notes:
 
 * Allow a new span to be created/started even if its transaction has ended.
   This is expected to be a very rare use case. ({pull}2653[#2653])
-
-* Span compression now obeys the `isCompressionEligible` rules from https://github.com/elastic/apm/blob/main/specs/agents/handling-huge-traces/tracing-spans-compress.md#eligibility-for-compression[the spec]. Span compression is enabled by default.
-  ({issues}2604[#2604])
 
 * The Trace Context headers are now propagated for http2 requests.
 
