feat: 'parent' option to 'agent.captureError()'
This allows specifying an explicit Transaction or Span to be the parent
of the captured APM error. Before this change the *current* Transaction
or Span is always used as the parent. That's usually desired. However,
to support OTel interface Span.recordException(), the captured error
should be a child of the span on which that method is called, even if it
isn't the current span.
https://github.com/open-telemetry/opentelemetry-js-api/blob/v1.1.0/src/trace/span.ts#L122-L128

I have not documented this option in the user docs, nor added it to
the TypeScript types because I don't expect it to be that used.

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -28,6 +28,25 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+- Add a `parent` option to `agent.captureError(err[, options][, cb])` to allow
+  passing in a Transaction or Span to use as the parent for the error. Before
+  this change the *current* span or transaction, if any, was always used.
++
+This option is not documented in the user docs, nor added to the TypeScript
+types, because it is only expected to be useful for coming OTel Bridge work.
+
+[float]
+===== Bug fixes
+
+
 [[release-notes-3.32.0]]
 ==== 3.32.0 2022/04/27
 
