--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -36,7 +36,7 @@ Notes:
 [float]
 ===== Features
 
-- Pulled `traceparent` NPM module into local class file.
+- Pulled `traceparent` NPM module into local module. ({pull}2669[#2669])
 
 - Add a `parent` option to `agent.captureError(err[, options][, cb])` to allow
   passing in a Transaction or Span to use as the parent for the error. Before
