fix: possible crash in instrumentation of an incoming HTTP/2 request
This also fixes a crash that was possible in instrumentation if an
HTTP/2 server called `stream.respond()` after the stream had been
destroyed (and the transaction ended):

    ../lib/instrumentation/modules/http2.js:149
          trans.res.statusCode = status
                               ^
    TypeError: Cannot set properties of null (setting 'statusCode')

Fixes: #2670

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -46,6 +46,13 @@ types, because it is only expected to be useful for coming OTel Bridge work.
 [float]
 ===== Bug fixes
 
+- Fix a possible crash in the instrumentation of an incoming HTTP/2 request: if
+  the underlying Http2Session was destroyed before the APM transaction was
+  ended (on Http2Stream end). This resulted in the instrumentation using the
+  [`stream.session.socket`](https://nodejs.org/api/http2.html#http2sessionsocket)
+  proxy, which can throw `ERR_HTTP2_SOCKET_UNBOUND` after the session is
+  destroyed. ({issues}2670[#2670])
+
 
 [[release-notes-3.32.0]]
 ==== 3.32.0 2022/04/27
