feat: OpenTelemetry Bridge (#2641)
Once enabled with `opentelemetryBridgeEnabled: true` (false by default), the
APM agent will register Tracer and ContextManager providers with
`@opentelemetry/api` allowing users to use the OpenTelemetry API for
manual tracing in their code, as an alternative to the APM agent's
public API. The OTel bridge is considered experimental for now.

Design/dev notes are at lib/opentelemetry-bridge/README.md

Closes: #2369
Spec: https://github.com/elastic/apm/blob/main/specs/agents/tracing-api-otel.md

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -1235,3 +1235,27 @@ require('elastic-apm-node').start({
 })
 ----
 
+
+[[opentelemetry-bridge-enabled]]
+==== `opentelemetryBridgeEnabled`
+
+[small]#Added in: v3.34.0 as experimental#
+
+* *Type:* Boolean
+* *Default:* `false`
+* *Env:* `ELASTIC_APM_OPENTELEMETRY_BRIDGE_ENABLED`
+
+Setting this option to true will enable the <<opentelemetry-bridge,OpenTelemetry Bridge>>. Briefly, the OpenTelemetry Bridge allows one to use the vendor-neutral
+https://opentelemetry.io/docs/instrumentation/js/api/[OpenTelemetry Tracing API]
+(https://www.npmjs.com/package/@opentelemetry/api[`@opentelemetry/api`]) to
+manually instrument your code, and have the Elastic Node.js APM agent handle
+those API calls.
+
+Example usage:
+
+[source,js]
+----
+require('elastic-apm-node').start({
+  opentelemetryBridgeEnabled: true
+})
+----
